# provoke

provoke/: CMakeLists.txt  package.xml  provokeConfig.cmake.in  provokeConfigVersion.cmake.in
provoke/cfg/: provoke.rviz
provoke/include/provoke/: provoke_node.hpp
provoke/launch/: go_a.py  go_a_2drones.py  shared_launch.py
provoke/src/: args_interface.cpp  args_interface.hpp  base_interface.cpp  base_interface.hpp  base_machine.cpp  dispatch_interface.cpp  dispatch_interface.hpp  provoke_node.cpp  provoke_node_impl.cpp  provoke_node_impl.hpp  provoke_node_main.cpp  result.cpp  result.hpp  shared_dispatch.hpp  sm_go.cpp  sm_go.hpp  sm_manager.cpp  sm_manager.hpp  sm_manager_states.cpp  sm_manager_states.hpp  sm_out_back.cpp  sm_out_back.hpp  sm_pause.cpp  sm_pause.hpp  sm_send_action.cpp  sm_send_action.hpp  sm_send_action_states.cpp  sm_send_action_states.hpp  state_machine_interface.cpp  state_machine_interface.hpp  tello_dispatch.cpp  tello_dispatch.hpp  tello_interface.cpp  tello_interface.hpp  tello_machine_action.cpp  tello_machine_action.hpp  tello_machine_const_action.cpp  tello_machine_land.cpp  tello_machine_send_action.cpp  tello_machine_takeoff.cpp  (+9 more)
